Resuming the project. Closes 2.

--- a/src/main/resources/templates/receitas/receitas.html
+++ b/src/main/resources/templates/receitas/receitas.html
@@ -32,9 +32,9 @@
                             </div>
                             <div class="col-md-9">
                                 <ul>
-                                    <li>cat one</li>
-                                    <li>cat two</li>
-                                    <li>cat three</li>
+                                    <li>categoria um</li>
+                                    <li>categoria dois</li>
+                                    <li>categoria três</li>
                                 </ul>
                             </div>
                         </div>
