Novo mapeamento para Categorias e Receitas. Closes #3.

--- a/src/main/resources/templates/receitas/receitas.html
+++ b/src/main/resources/templates/receitas/receitas.html
@@ -28,7 +28,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-md-3">
-                                <h5>Categories:</h5>
+                                <h5>Categorias:</h5>
                             </div>
                             <div class="col-md-9">
                                 <ul>
